fixed discounted price field to display correctly remove wrapping of sell-price in strike tag improved theme overriding possilibility in submodules Committed on the Free edition of March Hare Software CVSNT Server. Upgrade to CVS Suite for more features and support: http://march-hare.com/cvsnt/

--- a/product_price_alterer_field/product_price_alterer_field.css
+++ b/product_price_alterer_field/product_price_alterer_field.css
@@ -1,7 +1,13 @@
-.product-price-alterer-field-sell-price {
+.original-sell-price {
 	color: #777777;
+	text-decoration: line-through;
 }
 
-.product-price-alterer-field-discounted-price {
+.field-type-discounted-price .field-label-inline,
+.field-type-discounted-price .field-label-inline-first {
+  font-weight: normal;
+}
+
+.field-type-discounted-price {
 	color: Red;
 }
